src/App.css
@keyframes advance {
  from {
    margin-left: 0;
  }
  to {
    margin-left: 3.33333%;
  }
}

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

figure {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.App {
  margin: 1em;
  position: relative;
}

.commute {
  margin-bottom: 2em;
}

.ticker {
  display: flex;
  justify-content: space-between;
  cursor: default;
  border-top: 1px solid #666;
  color: #666;
}

.ticker::after {
  content: 'minutes away';
  position: absolute;
  right: 0;
  font-size: 0.8em;
  margin-top: 2.25em;
  font-style: italic;
}

.tick {
  border-right: 1px solid #aaa;
  padding: 0.25em;
  color: #aaa;
  flex-basis: 0;
  flex-grow: 1;
}

.tick.multiple-5 {
  border-color: #666;
  color: #666;
}

.tick:last-child {
  border-right: 3px solid #c00;
}

.trains {
  position: relative;
}

.train {
  position: absolute;
  bottom: 0;
  animation: advance 60s forwards linear;
  color: blue;
}

.station-name {
  font-weight: bold;
  margin-right: 1em;
  text-transform: uppercase;
}

footer {
  font-size: 0.8em;
  margin: 4em 0;
  text-align: center;
}

@media (max-width: 960px) {
  .tick:not(.multiple-5) {
    display: none;
  }
}

